--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "@donutteam/string-utilities",
   "version": "1.1.0",
   "description": "A collection of various string-related utility functions.",
-  "main": "./index.js",
+  "main": "./lib/index.js",
   "scripts": {
+    "build": "npx rimraf lib && npx tsc",
     "lint": "eslint . -c ./.eslintrc.cjs",
-    "lint-fix": "eslint . -c ./.eslintrc.cjs --fix"
+    "lint-fix": "eslint . -c ./.eslintrc.cjs --fix",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,9 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@donutteam/eslint-config": "^1.0.6"
+    "@donutteam/eslint-config": "^2.0.0",
+    "@types/node": "^18.11.18",
+    "rimraf": "^4.0.4",
+    "typescript": "^4.9.4"
   }
 }
